--- a/src/MEGASync/gui/Resources_qml.qrc
+++ b/src/MEGASync/gui/Resources_qml.qrc
@@ -133,6 +133,7 @@
         <file>images/qml/onboarding/monitor.svg</file>
         <file>images/qml/onboarding/remote_folder.svg</file>
         <file>images/qml/onboarding/syncs.svg</file>
+        <file>images/qml/onboarding/sync_plus.svg</file>
         <file>images/qml/onboarding/more_horizontal.svg</file>
         <file>images/qml/onboarding/local_folder.png</file>
         <file>images/qml/onboarding/local_folder@2x.png</file>
