--- a/src/MEGASync/stalled_issues/gui/stalled_issues_cases/win/LocalAndRemoteNameConflicts.ui
+++ b/src/MEGASync/stalled_issues/gui/stalled_issues_cases/win/LocalAndRemoteNameConflicts.ui
@@ -47,6 +47,9 @@
      <property name="text">
       <string>Click Rename to resolve this issue, or click the folders below to make adjustments in the local filesystem or in MEGA</string>
      </property>
+     <property name="wordWrap">
+      <bool>true</bool>
+     </property>
      <property name="indent">
       <number>11</number>
      </property>
