--- a/src/MEGASync/gui/ui/ProxySettings.ui
+++ b/src/MEGASync/gui/ui/ProxySettings.ui
@@ -3,14 +3,14 @@
  <class>ProxySettings</class>
  <widget class="QDialog" name="ProxySettings">
   <property name="windowModality">
-   <enum>Qt::WindowModality::WindowModal</enum>
+   <enum>Qt::WindowModal</enum>
   </property>
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>428</width>
-    <height>403</height>
+    <width>489</width>
+    <height>471</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -35,7 +35,10 @@
    <string>Proxies</string>
   </property>
   <property name="styleSheet">
-   <string notr="true"/>
+   <string notr="true">#lErrorIcon[type=&quot;error&quot;] 
+{
+	image: url(:/images/banner/error.svg);
+}</string>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout_2">
    <property name="spacing">
@@ -72,7 +75,7 @@
      </property>
      <layout class="QGridLayout" name="gProxyLayout">
       <property name="sizeConstraint">
-       <enum>QLayout::SizeConstraint::SetDefaultConstraint</enum>
+       <enum>QLayout::SetDefaultConstraint</enum>
       </property>
       <property name="leftMargin">
        <number>12</number>
@@ -92,57 +95,17 @@
       <property name="verticalSpacing">
        <number>20</number>
       </property>
-      <item row="8" column="0">
-       <widget class="QLabel" name="lProxySettings2">
-        <property name="sizePolicy">
-         <sizepolicy hsizetype="Preferred" vsizetype="MinimumExpanding">
-          <horstretch>0</horstretch>
-          <verstretch>0</verstretch>
-         </sizepolicy>
-        </property>
+      <item row="13" column="0">
+       <widget class="QLabel" name="lProxyUsername">
         <property name="text">
-         <string>Proxy settings:</string>
+         <string>Username:</string>
         </property>
         <property name="alignment">
-         <set>Qt::AlignmentFlag::AlignLeading|Qt::AlignmentFlag::AlignLeft|Qt::AlignmentFlag::AlignTop</set>
-        </property>
-        <property name="margin">
-         <number>0</number>
+         <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
         </property>
        </widget>
       </item>
-      <item row="13" column="1">
-       <widget class="PasswordLineEdit" name="eProxyPassword">
-        <property name="enabled">
-         <bool>false</bool>
-        </property>
-        <property name="minimumSize">
-         <size>
-          <width>240</width>
-          <height>0</height>
-         </size>
-        </property>
-        <property name="maximumSize">
-         <size>
-          <width>240</width>
-          <height>16777215</height>
-         </size>
-        </property>
-        <property name="accessibleName">
-         <string>Password:</string>
-        </property>
-        <property name="text">
-         <string notr="true"/>
-        </property>
-        <property name="echoMode">
-         <enum>QLineEdit::EchoMode::Password</enum>
-        </property>
-        <property name="type" stdset="0">
-         <string notr="true">mega</string>
-        </property>
-       </widget>
-      </item>
-      <item row="9" column="1">
+      <item row="10" column="1">
        <widget class="QComboBox" name="cProxyType">
         <property name="enabled">
          <bool>false</bool>
@@ -183,89 +146,7 @@
         </item>
        </widget>
       </item>
-      <item row="12" column="0">
-       <widget class="QLabel" name="lProxyUsername">
-        <property name="text">
-         <string>Username:</string>
-        </property>
-        <property name="alignment">
-         <set>Qt::AlignmentFlag::AlignLeading|Qt::AlignmentFlag::AlignLeft|Qt::AlignmentFlag::AlignVCenter</set>
-        </property>
-       </widget>
-      </item>
-      <item row="13" column="0">
-       <widget class="QLabel" name="lProxyPassword">
-        <property name="sizePolicy">
-         <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
-          <horstretch>0</horstretch>
-          <verstretch>0</verstretch>
-         </sizepolicy>
-        </property>
-        <property name="text">
-         <string>Password:</string>
-        </property>
-        <property name="alignment">
-         <set>Qt::AlignmentFlag::AlignLeading|Qt::AlignmentFlag::AlignLeft|Qt::AlignmentFlag::AlignVCenter</set>
-        </property>
-       </widget>
-      </item>
-      <item row="9" column="0">
-       <widget class="QLabel" name="lProxyType">
-        <property name="text">
-         <string>Proxy type:</string>
-        </property>
-        <property name="alignment">
-         <set>Qt::AlignmentFlag::AlignLeading|Qt::AlignmentFlag::AlignLeft|Qt::AlignmentFlag::AlignVCenter</set>
-        </property>
-       </widget>
-      </item>
-      <item row="8" column="1">
-       <layout class="QVBoxLayout" name="verticalLayout">
-        <property name="spacing">
-         <number>10</number>
-        </property>
-        <item>
-         <widget class="QRadioButton" name="rNoProxy">
-          <property name="cursor">
-           <cursorShape>PointingHandCursor</cursorShape>
-          </property>
-          <property name="focusPolicy">
-           <enum>Qt::FocusPolicy::StrongFocus</enum>
-          </property>
-          <property name="text">
-           <string>No Proxy</string>
-          </property>
-         </widget>
-        </item>
-        <item>
-         <widget class="QRadioButton" name="rProxyManual">
-          <property name="cursor">
-           <cursorShape>PointingHandCursor</cursorShape>
-          </property>
-          <property name="focusPolicy">
-           <enum>Qt::FocusPolicy::StrongFocus</enum>
-          </property>
-          <property name="styleSheet">
-           <string notr="true"/>
-          </property>
-          <property name="text">
-           <string>Manual</string>
-          </property>
-         </widget>
-        </item>
-       </layout>
-      </item>
-      <item row="10" column="0">
-       <widget class="QLabel" name="lProxyServer">
-        <property name="text">
-         <string>Server:</string>
-        </property>
-        <property name="alignment">
-         <set>Qt::AlignmentFlag::AlignLeading|Qt::AlignmentFlag::AlignLeft|Qt::AlignmentFlag::AlignVCenter</set>
-        </property>
-       </widget>
-      </item>
-      <item row="12" column="1">
+      <item row="13" column="1">
        <widget class="QLineEdit" name="eProxyUsername">
         <property name="enabled">
          <bool>false</bool>
@@ -293,7 +174,100 @@
         </property>
        </widget>
       </item>
-      <item row="11" column="1">
+      <item row="10" column="0">
+       <widget class="QLabel" name="lProxyType">
+        <property name="text">
+         <string>Proxy type:</string>
+        </property>
+        <property name="alignment">
+         <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
+        </property>
+       </widget>
+      </item>
+      <item row="14" column="0">
+       <widget class="QLabel" name="lProxyPassword">
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+          <horstretch>0</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
+        </property>
+        <property name="text">
+         <string>Password:</string>
+        </property>
+        <property name="alignment">
+         <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
+        </property>
+       </widget>
+      </item>
+      <item row="8" column="1">
+       <layout class="QVBoxLayout" name="verticalLayout">
+        <property name="spacing">
+         <number>10</number>
+        </property>
+        <item>
+         <widget class="QRadioButton" name="rNoProxy">
+          <property name="cursor">
+           <cursorShape>PointingHandCursor</cursorShape>
+          </property>
+          <property name="focusPolicy">
+           <enum>Qt::StrongFocus</enum>
+          </property>
+          <property name="text">
+           <string>No Proxy</string>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="QRadioButton" name="rProxyManual">
+          <property name="cursor">
+           <cursorShape>PointingHandCursor</cursorShape>
+          </property>
+          <property name="focusPolicy">
+           <enum>Qt::StrongFocus</enum>
+          </property>
+          <property name="styleSheet">
+           <string notr="true"/>
+          </property>
+          <property name="text">
+           <string>Manual</string>
+          </property>
+         </widget>
+        </item>
+       </layout>
+      </item>
+      <item row="14" column="1">
+       <widget class="PasswordLineEdit" name="eProxyPassword">
+        <property name="enabled">
+         <bool>false</bool>
+        </property>
+        <property name="minimumSize">
+         <size>
+          <width>240</width>
+          <height>0</height>
+         </size>
+        </property>
+        <property name="maximumSize">
+         <size>
+          <width>240</width>
+          <height>16777215</height>
+         </size>
+        </property>
+        <property name="accessibleName">
+         <string>Password:</string>
+        </property>
+        <property name="text">
+         <string notr="true"/>
+        </property>
+        <property name="echoMode">
+         <enum>QLineEdit::Password</enum>
+        </property>
+        <property name="type" stdset="0">
+         <string notr="true">mega</string>
+        </property>
+       </widget>
+      </item>
+      <item row="12" column="1">
        <widget class="QCheckBox" name="cProxyRequiresPassword">
         <property name="enabled">
          <bool>false</bool>
@@ -309,7 +283,26 @@
         </property>
        </widget>
       </item>
-      <item row="10" column="1">
+      <item row="8" column="0">
+       <widget class="QLabel" name="lProxySettings2">
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="Preferred" vsizetype="MinimumExpanding">
+          <horstretch>0</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
+        </property>
+        <property name="text">
+         <string>Proxy settings:</string>
+        </property>
+        <property name="alignment">
+         <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignTop</set>
+        </property>
+        <property name="margin">
+         <number>0</number>
+        </property>
+       </widget>
+      </item>
+      <item row="11" column="1">
        <layout class="QHBoxLayout" name="horizontalLayout">
         <property name="spacing">
          <number>10</number>
@@ -332,7 +325,7 @@
            </size>
           </property>
           <property name="inputMethodHints">
-           <set>Qt::InputMethodHint::ImhUrlCharactersOnly</set>
+           <set>Qt::ImhUrlCharactersOnly</set>
           </property>
           <property name="text">
            <string notr="true"/>
@@ -348,7 +341,7 @@
            <string notr="true">:</string>
           </property>
           <property name="alignment">
-           <set>Qt::AlignmentFlag::AlignCenter</set>
+           <set>Qt::AlignCenter</set>
           </property>
          </widget>
         </item>
@@ -376,13 +369,13 @@
            </size>
           </property>
           <property name="inputMethodHints">
-           <set>Qt::InputMethodHint::ImhDigitsOnly</set>
+           <set>Qt::ImhDigitsOnly</set>
           </property>
           <property name="text">
            <string notr="true"/>
           </property>
           <property name="alignment">
-           <set>Qt::AlignmentFlag::AlignLeading|Qt::AlignmentFlag::AlignLeft|Qt::AlignmentFlag::AlignVCenter</set>
+           <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
           </property>
           <property name="type" stdset="0">
            <string notr="true">mega</string>
@@ -392,7 +385,7 @@
         <item>
          <spacer name="horizontalSpacer_2">
           <property name="orientation">
-           <enum>Qt::Orientation::Horizontal</enum>
+           <enum>Qt::Horizontal</enum>
           </property>
           <property name="sizeHint" stdset="0">
            <size>
@@ -403,6 +396,66 @@
          </spacer>
         </item>
        </layout>
+      </item>
+      <item row="11" column="0">
+       <widget class="QLabel" name="lProxyServer">
+        <property name="text">
+         <string>Server:</string>
+        </property>
+        <property name="alignment">
+         <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
+        </property>
+       </widget>
+      </item>
+      <item row="9" column="0" colspan="2">
+       <widget class="QWidget" name="wError" native="true">
+        <property name="styleSheet">
+         <string notr="true">border-radius: 8;</string>
+        </property>
+        <property name="type" stdset="0">
+         <string notr="true">notification</string>
+        </property>
+        <property name="error" stdset="0">
+         <bool>true</bool>
+        </property>
+        <layout class="QHBoxLayout" name="horizontalLayout_2">
+         <property name="spacing">
+          <number>8</number>
+         </property>
+         <item alignment="Qt::AlignTop">
+          <widget class="QLabel" name="lErrorIcon">
+           <property name="maximumSize">
+            <size>
+             <width>16</width>
+             <height>16</height>
+            </size>
+           </property>
+           <property name="text">
+            <string/>
+           </property>
+           <property name="type" stdset="0">
+            <string notr="true">error</string>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <widget class="QLabel" name="lErrorText">
+           <property name="text">
+            <string/>
+           </property>
+           <property name="wordWrap">
+            <bool>true</bool>
+           </property>
+           <property name="type" stdset="0">
+            <string notr="true">notification</string>
+           </property>
+           <property name="error" stdset="0">
+            <bool>true</bool>
+           </property>
+          </widget>
+         </item>
+        </layout>
+       </widget>
       </item>
      </layout>
     </widget>
@@ -434,7 +487,7 @@
       <item>
        <spacer name="horizontalSpacer">
         <property name="orientation">
-         <enum>Qt::Orientation::Horizontal</enum>
+         <enum>Qt::Horizontal</enum>
         </property>
         <property name="sizeHint" stdset="0">
          <size>
