SNC-5454: Added cross icon on remove button.

--- a/src/MEGASync/gui/Resources_qml.qrc
+++ b/src/MEGASync/gui/Resources_qml.qrc
@@ -139,5 +139,6 @@
         <file>images/qml/onboarding/local_folder@2x.png</file>
         <file>images/qml/onboarding/local_folder@3x.png</file>
         <file>images/qml/onboarding/minus-circle.svg</file>
+        <file>images/qml/onboarding/cross.svg</file>
     </qresource>
 </RCC>
