--- a/src/MEGASync/transfers/gui/ui/TransfersSummaryWidget.ui
+++ b/src/MEGASync/transfers/gui/ui/TransfersSummaryWidget.ui
@@ -23,29 +23,27 @@
    <string/>
   </property>
   <property name="styleSheet">
-   <string notr="true">#bup {
-  border-radius: 10px;
-  background: rgba(0,0,0,0.02);
-  padding: 56px;
-  width: 28px;
-  height: 20px;
-}
-
-#bdown {
-  border-radius: 10px;
-  background: rgba(0,0,0,0.02);
-  padding: 56px;
-  width: 28px;
-  height: 20px;
-}
-
-#TransfersSummaryWidget {
+   <string notr="true">#TransfersSummaryWidget {
 height: 28px;
 width: 182px;
 border: 1px;
 border-style: solid;
 border-radius: 15px;
-background: rgba(0,0,0,0.01);
+background: #EFEFF0; /*colorToken.surface-2*/
+}
+#bpause
+{
+border: none
+}
+#bpause[state=&quot;pause&quot;]
+{
+qproperty-icon: url(:/images/themed/light/pause-circle.svg); /*replaceThemeToken*/
+qproperty-iconSize: 16px 16px;
+}
+#bpause[state=&quot;resume&quot;]
+{
+qproperty-icon: url(:/images/themed/light/play-circle.svg); /*replaceThemeToken*/
+qproperty-iconSize: 16px 16px;
 }</string>
   </property>
   <layout class="QHBoxLayout" name="horizontalLayout">
@@ -122,10 +120,8 @@ background: rgba(0,0,0,0.01);
      <property name="mouseTracking">
       <bool>true</bool>
      </property>
-     <property name="styleSheet">
-      <string notr="true">border: none;
-background: transparent;
-</string>
+     <property name="text">
+      <string/>
      </property>
      <property name="icon">
       <iconset resource="../../../gui/Resources_common.qrc">
