--- a/src/MEGASync/gui/ui/TransferManager.ui
+++ b/src/MEGASync/gui/ui/TransferManager.ui
@@ -502,6 +502,72 @@ QToolButton
 	background-color: #FFE4E8; /*colorToken.notification-error*/
     color: #E31B57; /*colorToken.text-error*/
 }
+
+#wLeftPane QFrame &gt; QLabel
+{
+    font-weight: bold;
+    color: #999999;
+    font-size: 10px;
+        text-align: right;
+    border-radius: 12px;
+}
+
+#wLeftPane QFrame[itsOn=true]
+{
+        border-radius: 4px;
+    background: solid white;
+}
+
+#wLeftPane QFrame[itsOn=true] &gt; QLabel
+{
+    border: 1px solid #F5F5F5;
+    background-color: #FAFAFA;
+    color: #333333;
+}
+
+#wLeftPane QFrame[itsOn=false]
+{
+        border-radius: none;
+    background-color: transparent;
+}
+
+#wLeftPane QFrame[itsOn=false]  QLabel
+{
+    border: 1px transparent #FAFAFA;
+    background: transparent;
+    color: #999999;
+}
+
+#wLeftPane QFrame[itsOn=false] QPushButton
+{
+    font-weight: normal;
+}
+
+#wAllResults, #wDlResults, #wUlResults
+{
+   height: 24px;
+   border-radius: 12px;
+   background-color: #EEEEEE;
+}
+
+#wAllResults QLabel, #wDlResults QLabel, #wUlResults QLabel
+{
+   font-size: 12px;
+   color: #777777;
+   font-weight: bold;
+}
+
+#wAllResults[selected = true], #wDlResults[selected=true], #wUlResults[selected=true]
+{
+  height: 24px;
+  border-radius: 12px;
+  background-color: #2BA6DE;
+}
+
+#wAllResults[selected = true] QLabel, #wDlResults[selected=true] QLabel, #wUlResults[selected=true] QLabel
+{
+  color: #FFFFFF;
+}
 </string>
   </property>
   <layout class="QHBoxLayout" name="TransferManagerLayout">
@@ -541,45 +607,7 @@ QToolButton
       </size>
      </property>
      <property name="styleSheet">
-      <string notr="true">#wLeftPane QFrame &gt; QLabel
-{
-    font-weight: bold;
-    color: #999999;
-    font-size: 10px;
-	text-align: right;
-    border-radius: 12px;
-}
-
-#wLeftPane QFrame[itsOn=true]
-{
-	border-radius: 4px;
-    background: solid white;
-}
-
-#wLeftPane QFrame[itsOn=true] &gt; QLabel
-{
-    border: 1px solid #F5F5F5; 
-    background-color: #FAFAFA;
-    color: #333333;
-}
-
-#wLeftPane QFrame[itsOn=false] 
-{
-	border-radius: none;
-    background-color: transparent;
-}
-
-#wLeftPane QFrame[itsOn=false]  QLabel
-{
-    border: 1px transparent #FAFAFA; 
-    background: transparent;
-    color: #999999;
-}
-
-#wLeftPane QFrame[itsOn=false] QPushButton
-{
-    font-weight: normal;
-}
+      <string notr="true">
 </string>
      </property>
      <layout class="QVBoxLayout" name="wLeftPaneLayout">
@@ -2191,31 +2219,7 @@ QToolButton
              </sizepolicy>
             </property>
             <property name="styleSheet">
-             <string notr="true">#wAllResults, #wDlResults, #wUlResults
-{
-   height: 24px;
-   border-radius: 12px;
-   background-color: #EEEEEE;
-}
-
-#wAllResults QLabel, #wDlResults QLabel, #wUlResults QLabel
-{
-   font-size: 12px;  
-   color: #777777;
-   font-weight: bold;
-}
-
-#wAllResults[selected = true], #wDlResults[selected=true], #wUlResults[selected=true]
-{
-  height: 24px;
-  border-radius: 12px;
-  background-color: #2BA6DE;
-}
-
-#wAllResults[selected = true] QLabel, #wDlResults[selected=true] QLabel, #wUlResults[selected=true] QLabel
-{
-  color: #FFFFFF;
-}</string>
+             <string notr="true"></string>
             </property>
             <layout class="QVBoxLayout" name="verticalLayout_4">
              <property name="spacing">
