SNC-5644: Unify TransferManagerDelegateWidget

--- a/src/MEGASync/gui/ui/TransferManagerDelegateWidget.ui
+++ b/src/MEGASync/gui/ui/TransferManagerDelegateWidget.ui
@@ -1264,7 +1264,7 @@ QProgressBar::chunk
   </layout>
  </widget>
  <resources>
-  <include location="../../../gui/Resources_common.qrc"/>
+  <include location="../Resources.qrc"/>
  </resources>
  <connections/>
 </ui>
