SNC-5644: Unified all transfers ui files.

--- a/src/MEGASync/gui/ui/MediaTypeFilterWidget.ui
+++ b/src/MEGASync/gui/ui/MediaTypeFilterWidget.ui
@@ -130,7 +130,7 @@ QGroupBox
       <string notr="true"/>
      </property>
      <property name="icon">
-      <iconset resource="../../../gui/Resources.qrc">
+      <iconset resource="../Resources.qrc">
        <normaloff>:/images/themed/light/chevron-down_default.svg</normaloff>:/images/themed/light/chevron-down_default.svg</iconset>
      </property>
      <property name="checkable">
