SNC-5606.tokenize transfers summary widget

--- a/src/MEGASync/gui/ui/InfoDialog.ui
+++ b/src/MEGASync/gui/ui/InfoDialog.ui
@@ -3708,6 +3708,12 @@ background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1,
    <header>TransfersSummaryQuickWidget.h</header>
    <container>1</container>
   </customwidget>
+  <customwidget>
+   <class>TransfersSummaryQuickWidget</class>
+   <extends>QWidget</extends>
+   <header>TransfersSummaryQuickWidget.h</header>
+   <container>1</container>
+  </customwidget>
  </customwidgets>
  <tabstops>
   <tabstop>bSettings</tabstop>
