--- a/src/MEGASync/gui/ui/InfoDialog.ui
+++ b/src/MEGASync/gui/ui/InfoDialog.ui
@@ -3751,6 +3751,12 @@ background-color: transparent;
    <header>TransfersSummaryQuickWidget.h</header>
    <container>1</container>
   </customwidget>
+  <customwidget>
+   <class>TransfersSummaryQuickWidget</class>
+   <extends>QWidget</extends>
+   <header>TransfersSummaryQuickWidget.h</header>
+   <container>1</container>
+  </customwidget>
  </customwidgets>
  <tabstops>
   <tabstop>bSettings</tabstop>
